# Vigil

./: .gitignore  FINAL-SUMMARY.md  Makefile  QUICKSTART-AI.md  README.md  dev.sh
backend/: .env.example  README.md  pyproject.toml
backend/src/security_check/: api.py  app.py  config.py  db.py  metrics.py  models.py  osv.py  runner.py
backend/src/security_check/ai_resolution/: __init__.py  client.py  executor.py  models.py  prompts.py  service.py
backend/src/security_check/scanners/: base.py  registry.py
backend/src/security_check/scanners/macos/: brew.py  env_secrets.py  hardening.py  launch_agents.py  shell_history.py  ssh_permissions.py
backend/src/security_check/scanners/network/: listening_ports.py  network_config.py
backend/tests/: conftest.py  test_ai_resolution.py  test_health.py  test_resolution_api.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts  storage.ts
frontend/src/components/: ExecutionSession.tsx  FindingResolution.tsx  Icons.tsx  Layout.tsx  LineChart.tsx  SeverityBadge.tsx  StatCard.tsx
frontend/src/pages/: Analytics.tsx  Findings.test.tsx  Findings.tsx  Overview.tsx  RunDetail.tsx  Scans.tsx  Settings.tsx
